--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -7,8 +7,8 @@ interface Props {
 const { to, label } = Astro.props;
 ---
 
-<a href={to} class="group relative no-underline hover:no-underline">
-  <span class="text-sand-11 group-hover:text-sand-12 duration-300 ease-in-out"
+<a href={to} class="group relative no-underline hover:no-underline active:no-underline focus:no-underline">
+  <span class="text-sand-11 group-hover:text-sand-12 group-active:text-sand-12 group-focus:text-sand-12 duration-300 ease-in-out"
     >{label}</span
   >
 </a>
