fix: add effect on touch in Safari

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -13,7 +13,7 @@ const classes = clsx(
   // Content
   "prose-li:text-sand-11",
   "prose-p:text-sand-11 prose-strong:text-sand-12",
-  "prose-a:font-normal prose-a:text-sand-10 prose-a:underline prose-a:hover:text-sand-12",
+  "prose-a:font-normal prose-a:text-sand-10 prose-a:underline prose-a:hover:text-sand-12 prose-a:active:text-sand-12 prose-a:focus:text-sand-12",
 
   // Layout
   "col-span-full contents",
