fix: update import path for Search component in writing index

--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 import Layout from "@/layouts/Base.astro";
 import IconLink from "@/components/IconLink.astro";
-import { Search } from "@/components/writing";
+import { Search } from "@/components/writing/index";
 import { SITE } from "@config";
 import { render } from "astro:content";
 
