--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import IconLink from "@/components/IconLink.astro";
 import Link from "@/components/Navlink.astro";
 import { getSortedByDate } from "@/helpers/posts.ts";
 import Layout from "@/layouts/Base.astro";
-import { SITE } from "@config";
+import { SITE } from "@/config";
 
 const collections = await Promise.all([
   getCollection("essays"),
