--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -4,7 +4,7 @@ import { getCollection, render } from "astro:content";
 import IconLink from "@/components/IconLink.astro";
 import { Search } from "@/components/writing/Search";
 import Layout from "@/layouts/Base.astro";
-import { SITE } from "@config";
+import { SITE } from "@/config";
 
 const collections = await Promise.all([
   getCollection("essays"),
