feat: implement writing components including Button, Input, List, Search, and useSearch for enhanced writing functionality

--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -2,7 +2,7 @@
 import { getCollection, render } from "astro:content";
 
 import IconLink from "@/components/IconLink.astro";
-import { Search } from "@/components/writing/Search.tsx";
+import { Search } from "@/components/writing/Search";
 import Layout from "@/layouts/Base.astro";
 import { SITE } from "config";
 
