chore: update font dependency from @fontsource/inter to @fontsource-variable/inter and adjust Prose component styles for improved typography

--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -5,10 +5,10 @@ const classes = clsx(
   "prose",
 
   // Headings
-  "prose-h1:text-lg prose-h1:font-normal prose-h1:text-sand-12",
+  "prose-h1:text-lg prose-h1:font-semibold prose-h1:text-sand-12",
   "prose-h2:text-base prose-h2:prose-a:font-medium prose-h2:text-sand-12",
   "prose-h2:mb-8 prose-h2:mt-12 prose-h2:prose-a:no-underline prose-h2:prose-a:text-sand-12 prose-h2:prose-a:hover:text-sand-12",
-  "prose-h3:text-base prose-h3:font-normal prose-h3:mt-7 prose-h3:mb-6 prose-h3:text-sand-12",
+  "prose-h3:text-base prose-h3:font-semimedium prose-h3:mt-7 prose-h3:mb-6 prose-h3:text-sand-12",
 
   // Content
   "prose-li:text-sand-11",
