--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,5 +1,5 @@
 ---
-import "@fontsource/inter";
+import "@fontsource-variable/inter";
 
 import Button from "@/components/Button.astro";
 import Head from "@/components/Head.astro";
@@ -21,7 +21,7 @@ const rssURL = new URL("rss.xml", Astro.url.origin).href;
   <Head title={title} />
   <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
     <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[auto_auto_1fr] gap-8 px-4 pb-16 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[360px_585px] lg:gap-6 lg:px-8"
+      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[auto_auto_1fr] gap-8 px-6 pb-16 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[360px_585px] lg:gap-6 lg:px-8"
     >
       <header
         class="bg-sand-1 sticky top-0 z-1 col-span-full pt-4 pb-4 lg:mb-12"
