--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,9 @@ const sortedNotes = getSortedByDate(notes);
       <IconLink to={SITE.social.bluesky} icon="bluesky" />
     </div>
   </div>
-  <div class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]">
+  <div
+    class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
+  >
     <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
       <h2 class="text-sand-12">Essays</h2>
       <div class="group flex flex-col gap-16 md:gap-8">
@@ -82,12 +84,10 @@ const sortedNotes = getSortedByDate(notes);
         Why notes?<br /><br /> This how I cultivate my ideas, that's my <a
           class="hover:text-sand-12 underline"
           href="https://maggieappleton.com/garden-history/">digital garden</a
-        >. I want to share my thoughts on various topics that I find
-        interesting. These notes are not meant to be comprehensive or
-        definitive, but rather a reflection of my current understanding and
-        perspective on a particular topic. <br /> I believe writing-in-public is
-        a powerful way to learn and grow as well overcome perfectionism. If certain
-        idea is tickle your brain, let me know. It helps us to build another essays.
+        >. Atomic notes, unlike essays, are not intended to be comprehensive or
+        definitive. Instead, they reflect my current understanding and
+        perspective on a particular topic and help me learn and develop ideas
+        through iterations.
       </span>
       <div class="group flex flex-col gap-16 md:gap-8">
         {
@@ -107,16 +107,27 @@ const sortedNotes = getSortedByDate(notes);
 
     <section id="about" class="flex flex-col gap-12">
       <h2 class="text-sand-12">About</h2>
-      <p class="text-sand-11">
-        Hello! I'm Michał ✋ <br /><br /> 
-        
-        <i>(place for awkward introduction here)</i> <br /><br />  
-
-        Currently, I am focused on building web products and experimenting with AI, primarily to enhance learning and productivity. <br /><br />
-  I believe in "Learning in public" and "Tiny Experiments". This blog serves as manifesto for both. That's why you'll find here not only essays but also imperfect notes that are part of my Personal Knowledge Management (PKM) system (called also <a href="https://maggieappleton.com/garden-history/" class="underline hover:text-sand-12">digital garden</a>). <br /><br />
-        
-        I hope you find some useful insights here. If you have any questions, comments, or if you disagree with any of my notes (I'd love to hear your perspective), feel free to reach out to me on social media or at <a href="mailto:michal.paczkow@gmail.com" class="underline hover:text-sand-12">email</a>.
-      </p>
+      <div class="flex flex-col gap-4">
+        <p class="text-sand-11">
+          I am a software engineer with over 10 years of experience in product
+          development. I have worked on both front-end and back-end, starting in
+          a small software house and advancing to FAANG companies. Throughout my
+          career, I have worked with various technologies and methodologies
+          across different programming languages, but my primary expertise lies
+          in JavaScript and web applications.
+        </p>
+        <p class="text-sand-11">Currently at Meta.</p>
+        <p class="text-sand-11">
+          In my spare time, I'm deeply involved in exploring various methods and
+          tools such as Personal Knowledge Management (PKM), Zettelkasten,
+          Obsidian, Anki, and AI to enhance learning and productivity while
+          managing information overload in our fast-changing world.
+        </p>
+        <p class="text-sand-11">
+          If you have any questions, feel free to reach out to me on social
+          media.
+        </p>
+      </div>
     </section>
   </div>
 </Layout>
