chore: update personal introduction on the homepage to create a more engaging and friendly tone

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -109,7 +109,10 @@ const sortedNotes = getSortedByDate(notes);
       <h2 class="text-sand-12">About</h2>
       <div class="flex flex-col gap-4">
         <p class="text-sand-11">
-          I am a software engineer with over 10 years of experience in product
+          Hey there! It's wonderful to see you! 😊
+        </p>
+        <p class="text-sand-11">
+          I'm Michał, a software engineer with over 10 years of experience in product
           development. I have worked on both front-end and back-end, starting in
           a small software house and advancing to FAANG companies. Throughout my
           career, I have worked with various technologies and methodologies
