chore: update essay title and description for clarity, enhance voice capture automation details, and improve homepage section headings for better readability

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const sortedNotes = getSortedByDate(notes);
     class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
   >
     <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
-      <h2 class="text-sand-12">Essays</h2>
+      <h2 class="text-sand-12 font-medium">Essays</h2>
       <div class="group flex flex-col gap-16 md:gap-8">
         {
           sortedEssays.map((post) => {
@@ -79,7 +79,7 @@ const sortedNotes = getSortedByDate(notes);
       </div>
     </section>
     <section id="notes" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
-      <h2 class="text-sand-12">Notes</h2>
+      <h2 class="text-sand-12 font-medium">Notes</h2>
       <span class="text-sand-11">
         Why notes?<br /><br /> This how I cultivate my ideas, that's my <a
           class="hover:text-sand-12 underline"
@@ -106,25 +106,20 @@ const sortedNotes = getSortedByDate(notes);
     </section>
 
     <section id="about" class="flex flex-col gap-12">
-      <h2 class="text-sand-12">About</h2>
+      <h2 class="text-sand-12 font-medium">About</h2>
       <div class="flex flex-col gap-4">
+        <p class="text-sand-11">Hey there! It's wonderful to see you! 😊</p>
         <p class="text-sand-11">
-          Hey there! It's wonderful to see you! 😊
+          I'm Michał, a software engineer with over 10 years of experience in
+          product development. I have worked on both front-end and back-end,
+          starting in a small software house and advancing to FAANG companies.
+          Currently at Meta.
         </p>
         <p class="text-sand-11">
-          I'm Michał, a software engineer with over 10 years of experience in product
-          development. I have worked on both front-end and back-end, starting in
-          a small software house and advancing to FAANG companies. Throughout my
-          career, I have worked with various technologies and methodologies
-          across different programming languages, but my primary expertise lies
-          in JavaScript and web applications.
-        </p>
-        <p class="text-sand-11">Currently at Meta.</p>
-        <p class="text-sand-11">
-          In my spare time, I'm deeply involved in exploring various methods and
-          tools such as Personal Knowledge Management (PKM), Zettelkasten,
-          Obsidian, Anki, and AI to enhance learning and productivity while
-          managing information overload in our fast-changing world.
+          I’m deeply involved in tools and methods like Personal Knowledge
+          Management (PKM), Zettelkasten, Obsidian, Anki, and AI to boost
+          learning and productivity while tackling information overload in our
+          fast-changing world.
         </p>
         <p class="text-sand-11">
           If you have any questions, feel free to reach out to me on social
