--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,8 +40,12 @@ const sortedNotes = getSortedByDate(notes);
   <div
     class="sticky col-span-full mb-8 flex flex-col gap-4 lg:top-(--nav-height) lg:col-start-1 lg:col-end-2 lg:mb-0 lg:h-[calc(100vh-242px)]"
   >
-    <h2 class="text-sand-12 font-semibold">Michał Paczków</h2>
-    <p class="text-sand-11">Hello. I'm just curious.</p>
+    <p class="text-sand-11">Hello, I'm Michał.</p>
+    <p class="text-sand-11">
+      Product Engineer blending ideas at the intersection of code, AI, and
+      cognition.
+    </p>
+    <p class="text-sand-11">Currently building at a FAANG company.</p>
 
     <div class="mt-16 hidden flex-col gap-4 lg:flex">
       <Link to="essays" label="Essays" className="active" />
@@ -108,18 +112,16 @@ const sortedNotes = getSortedByDate(notes);
     <section id="about" class="flex flex-col gap-12">
       <h2 class="text-sand-12 font-medium">About</h2>
       <div class="flex flex-col gap-4">
-        <p class="text-sand-11">Hey there! It's wonderful to see you! 😊</p>
         <p class="text-sand-11">
-          I'm Michał, a software engineer with over 10 years of experience in
-          product development. I have worked on both front-end and back-end,
-          starting in a small software house and advancing to FAANG companies.
-          Currently at Meta.
+          With over 10 years of experience in product development. I have worked
+          on both front-end and back-end, starting in a small software house and
+          advancing to FAANG companies.
         </p>
         <p class="text-sand-11">
-          I’m deeply involved in tools and methods like Personal Knowledge
-          Management (PKM), Zettelkasten, Obsidian, Anki, and AI to boost
-          learning and productivity while tackling information overload in our
-          fast-changing world.
+          I am deeply engaged in tools and methods for cognitive
+          enhancement—such as Personal Knowledge Management (PKM), Zettelkasten,
+          Obsidian, Anki, and AI to improve learning, boost productivity, and
+          manage information overload in our rapidly changing world.
         </p>
         <p class="text-sand-11">
           If you have any questions, feel free to reach out to me on social
