--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,10 +1,7 @@
 ---
 import "@fontsource-variable/inter";
 
-import Button from "@/components/Button.astro";
 import Head from "@/components/Head.astro";
-import Link from "@/components/Link.astro";
-import ThemeToggle from "@/components/ThemeToggle.astro";
 
 import "@/styles/global.css";
 
@@ -13,7 +10,6 @@ interface Props {
 }
 
 const { title } = Astro.props;
-const rssURL = new URL("rss.xml", Astro.url.origin).href;
 ---
 
 <!doctype html>
@@ -21,31 +17,8 @@ const rssURL = new URL("rss.xml", Astro.url.origin).href;
   <Head title={title} />
   <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
     <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[auto_auto_1fr] gap-y-8 px-6 pb-16 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[320px_585px] lg:gap-y-6"
+      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 px-6 pb-16 pt-8 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[320px_585px] lg:gap-y-6 lg:pt-24"
     >
-      <header
-        class="bg-sand-1 sticky top-0 z-1 col-span-full pt-4 pb-4 lg:mb-12"
-      >
-        <nav class="flex items-center gap-4" aria-label="Navigation">
-          <Link to="/" label="Michał Paczków" />
-          <ul class="ml-auto gap-3 md:gap-6 flex items-center">
-            <li>
-              <Link to="/writing" label="Writing" />
-            </li>
-            <li>
-              <Link to="/#about" label="About" />
-            </li>
-            <li>
-              <ThemeToggle />
-            </li>
-            <li>
-              <a href={rssURL}>
-                <Button label="RSS" icon="rss" />
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
       <main class="contents">
         <slot />
       </main>
