Fix mobile layout on writing page
- Wrap Search component content in flex container with lg:contents
- Prevent input section from stretching on mobile with shrink-0
- Articles section now takes remaining space with flex-1
- Wrap back link and Search in flex container on writing page

--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -24,17 +24,19 @@ const posts = await Promise.all(
 ---
 
 <Layout title="Writing - paczkow.me">
-  <a
-    href="/"
-    class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
-  >
-    <Icon name="corner-up-left" class="w-4 h-4" /> Index
-  </a>
-  <Search client:load posts={posts}>
-    <div slot="icons" class="mt-auto hidden gap-4 lg:flex">
-      <IconLink to={SITE.social.github} icon="github" />
-      <IconLink to={SITE.social.linkedin} icon="linkedin" />
-      <IconLink to="Bluesky" icon="bluesky" />
-    </div>
-  </Search>
+  <main class="col-span-full flex flex-col flex-1 lg:contents">
+    <a
+      href="/"
+      class="shrink-0 text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-8"
+    >
+      <Icon name="corner-up-left" class="w-4 h-4" /> Index
+    </a>
+    <Search client:load posts={posts}>
+      <div slot="icons" class="mt-auto hidden gap-4 lg:flex">
+        <IconLink to={SITE.social.github} icon="github" />
+        <IconLink to={SITE.social.linkedin} icon="linkedin" />
+        <IconLink to="Bluesky" icon="bluesky" />
+      </div>
+    </Search>
+  </main>
 </Layout>
