--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,11 +17,9 @@ const { title } = Astro.props;
   <Head title={title} />
   <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
     <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 px-6 pb-16 pt-8 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[320px_585px] lg:gap-y-6 lg:pt-24"
+      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 px-6 pb-16 pt-16 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[320px_585px] lg:gap-8 lg:pt-24"
     >
-      <main class="contents">
-        <slot />
-      </main>
+      <slot />
     </div>
   </body>
 </html>
