--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,72 +28,79 @@ const sortedEssays = getSortedByDate(essays);
 ---
 
 <Layout title={SITE.title}>
-  <div
-    class="sticky col-span-full mb-8 flex flex-col gap-4 lg:top-(--nav-height) lg:col-start-1 lg:col-end-2 lg:mb-0 lg:h-[calc(100vh-160px)]"
-  >
-    <p class="text-sand-11">
-      Hey, I'm Michał, currently a Product Engineer at Meta. In my spare time, I explore ways to combine AI with cognitive strategies to enhance learning and thinking.
-    </p>
-    <div class="mt-16 hidden flex-col gap-4 lg:flex">
-      <Link to="essays" label="Essays" className="active" />
-      <Link to="about" label="About" />
-    </div>
-    <div class="mt-auto hidden gap-4 lg:flex">
-      <IconLink to={SITE.social.github} icon="github" />
-      <IconLink to={SITE.social.linkedin} icon="linkedin" />
-      <IconLink to={SITE.social.bluesky} icon="bluesky" />
-    </div>
-  </div>
-  <div
-    class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
-  >
-    <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
-      <div class="flex align-baseline justify-between">
-        <h2 class="text-sand-12 font-medium">Writing</h2>
-        <a
-          href="/writing"
-          class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
-          >All Writing <Icon name="arrow-up-right" class="h-4 w-4" /></a
-        >
+  <main class="contents">
+    <div
+      class="sticky col-span-full mb-8 flex flex-col gap-4 lg:top-(--nav-height) lg:col-start-1 lg:col-end-2 lg:mb-0 lg:h-[calc(100vh-160px)]"
+    >
+      <p class="text-sand-11">
+        Hey, I'm Michał, currently a Product Engineer at Meta.
+      </p>
+      <p class="text-sand-11">
+        In my spare time, I explore ways to combine AI with cognitive strategies
+        to enhance learning and thinking.
+      </p>
+      <div class="mt-16 hidden flex-col gap-4 lg:flex">
+        <Link to="essays" label="Essays" className="active" />
+        <Link to="about" label="About" />
       </div>
-      <div class="group flex flex-col gap-16 md:gap-8">
-        {
-          sortedEssays.map((post) => {
-            return (
-              <Card
-                id={post.id}
-                date={post.date}
-                title={post.title}
-                readTime={post.readTime}
-                description={post.description}
-              />
-            );
-          })
-        }
+      <div class="mt-auto hidden gap-4 lg:flex">
+        <IconLink to={SITE.social.github} icon="github" />
+        <IconLink to={SITE.social.linkedin} icon="linkedin" />
+        <IconLink to={SITE.social.bluesky} icon="bluesky" />
       </div>
-    </section>
+    </div>
+    <div
+      class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
+    >
+      <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
+        <div class="flex align-baseline justify-between">
+          <h2 class="text-sand-12 font-medium">Writing</h2>
+          <a
+            href="/writing"
+            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
+            >All Writing <Icon name="arrow-up-right" class="h-4 w-4" /></a
+          >
+        </div>
+        <div class="group flex flex-col gap-16 md:gap-8">
+          {
+            sortedEssays.map((post) => {
+              return (
+                <Card
+                  id={post.id}
+                  date={post.date}
+                  title={post.title}
+                  readTime={post.readTime}
+                  description={post.description}
+                />
+              );
+            })
+          }
+        </div>
+      </section>
 
-    <section id="about" class="flex flex-col gap-12">
-      <h2 class="text-sand-12 font-medium">About</h2>
-      <div class="flex flex-col gap-4">
-        <p class="text-sand-11">
-          With over 10 years of experience in product development. I have worked
-          on both front-end and back-end, starting in a small software house and
-          advancing to FAANG companies.
-        </p>
-        <p class="text-sand-11">
-          I am deeply engaged in tools and methods for cognitive
-          enhancement—such as Personal Knowledge Management (PKM), Zettelkasten,
-          Obsidian, Anki, and AI to improve learning, boost productivity, and
-          manage information overload in our rapidly changing world.
-        </p>
-        <p class="text-sand-11">
-          If you have any questions, feel free to reach out to me on social
-          media.
-        </p>
-      </div>
-    </section>
-  </div>
+      <section id="about" class="flex flex-col gap-12">
+        <h2 class="text-sand-12 font-medium">About</h2>
+        <div class="flex flex-col gap-4">
+          <p class="text-sand-11">
+            With over 10 years of experience in product development. I have
+            worked on both front-end and back-end, starting in a small software
+            house and advancing to FAANG companies.
+          </p>
+          <p class="text-sand-11">
+            I am deeply engaged in tools and methods for cognitive
+            enhancement—such as Personal Knowledge Management (PKM),
+            Zettelkasten, Obsidian, Anki, and AI to improve learning, boost
+            productivity, and manage information overload in our rapidly
+            changing world.
+          </p>
+          <p class="text-sand-11">
+            If you have any questions, feel free to reach out to me on social
+            media.
+          </p>
+        </div>
+      </section>
+    </div>
+  </main>
 </Layout>
 
 <script>
