Improve Basic and Essay layouts

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,11 +33,10 @@ const sortedEssays = getSortedByDate(essays);
       class="sticky col-span-full mb-8 flex flex-col gap-4 lg:top-(--nav-height) lg:col-start-1 lg:col-end-2 lg:mb-0 lg:h-[calc(100vh-160px)]"
     >
       <p class="text-sand-11">
-        Hey, I'm Michał, currently a Product Engineer at Meta.
+        Hey, I'm Michał, Product Engineer currently working at Meta.
       </p>
       <p class="text-sand-11">
-        In my spare time, I explore ways to combine AI with cognitive strategies
-        to enhance learning and thinking.
+        The blog is way to learn in public by documenting lessons about building products, AI, and tools to enhance learning and thinking.
       </p>
       <div class="mt-16 hidden flex-col gap-4 lg:flex">
         <Link to="essays" label="Essays" className="active" />
@@ -53,11 +52,11 @@ const sortedEssays = getSortedByDate(essays);
       class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
     >
       <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
-        <div class="flex align-baseline justify-between">
+        <div class="flex items-baseline justify-between">
           <h2 class="text-sand-12 font-medium">Writing</h2>
           <a
             href="/writing"
-            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
+            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2 text-sm"
             >All Writing <Icon name="arrow-up-right" class="h-4 w-4" /></a
           >
         </div>
