--- a/src/pages/writing/index.astro
+++ b/src/pages/writing/index.astro
@@ -1,9 +1,9 @@
 ---
 import { getCollection, render } from "astro:content";
 
+import BackLink from "@/components/BackLink.astro";
 import IconLink from "@/components/IconLink.astro";
 import { Search } from "@/components/writing/Search";
-import { Icon } from "astro-icon/components";
 import Layout from "@/layouts/Base.astro";
 import { SITE } from "config";
 
@@ -25,12 +25,11 @@ const posts = await Promise.all(
 
 <Layout title="Writing - paczkow.me">
   <main class="col-span-full flex flex-col flex-1 lg:contents">
-    <a
+    <BackLink
       href="/"
-      class="shrink-0 text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-8"
-    >
-      <Icon name="corner-up-left" class="w-4 h-4" /> Index
-    </a>
+      label="Index"
+      icon="corner-up-left"
+    />
     <Search client:load posts={posts}>
       <div slot="icons" class="mt-auto hidden gap-4 lg:flex">
         <IconLink to={SITE.social.github} icon="github" />
