--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -16,8 +16,10 @@ const { title } = Astro.props;
 <html lang="en" class="m-0 h-full w-full">
   <Head title={title} />
   <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
+    <nav class="fixed top-0 left-0 right-0 h-20 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80">
+    </nav>
     <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 px-6 pb-16 pt-16 sm:px-8 md:justify-between md:px-16 lg:grid-cols-[320px_585px] lg:gap-8 lg:pt-24"
+      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 pt-24 pb-32 px-8 md:justify-between lg:grid-cols-[320px_585px] lg:gap-8"
     >
       <slot />
     </div>
