--- a/src/layouts/Essay.astro
+++ b/src/layouts/Essay.astro
@@ -15,39 +15,39 @@ const { title } = Astro.props;
 <html lang="en" class="m-0 h-full w-full">
     <Head title={title} />
     <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
-        <nav class="fixed top-0 left-0 right-0 h-20 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80">
+        <nav
+            class="fixed top-0 left-0 right-0 h-20 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80"
+        >
         </nav>
         <div class="flex flex-col items-center pt-24 pb-32 px-4 sm:px-8">
             <div class="w-full"></div>
             <div class="w-full">
-                <div class="w-full px-6 lg:px-8">
-                    <div
-                        class="grid grid-cols-1 lg:grid-cols-[clamp(12rem,20vw,18rem)_minmax(0,1fr)] gap-14"
-                    >
-                        <aside class="hidden lg:block mt-[120px]">
-                            <nav
-                                id="toc"
-                                class="sticky top-18 h-[calc(100vh-5rem)] overflow-y-auto pr-4 text-sm"
-                            >
-                                <slot name="navigation" />
-                            </nav>
-                        </aside>
-                        <div
-                            class="mx-auto w-full max-w-[clamp(60ch,72vw,90ch)] px-4 sm:px-8"
+                <div
+                    class="grid grid-cols-1 lg:grid-cols-[clamp(12rem,20vw,18rem)_minmax(0,1fr)] gap-14"
+                >
+                    <aside class="hidden lg:block mt-[110px]">
+                        <nav
+                            id="toc"
+                            class="sticky top-18 h-[calc(100vh-5rem)] overflow-y-auto pr-4 text-sm"
                         >
-                            <BackLink
-                                id="backlink"
-                                label="Back"
-                                href="/writing"
-                                icon="corner-up-left"
-                            />
-                            <div
-                                class="text-sand-12 text-xl lg-text-2xl font-bold mb-6"
-                            >
-                                {title}
-                            </div>
-                            <slot name="content" />
+                            <slot name="navigation" />
+                        </nav>
+                    </aside>
+                    <div
+                        class="mx-auto w-full max-w-[clamp(60ch,72vw,90ch)] px-4 sm:px-8"
+                    >
+                        <BackLink
+                            id="backlink"
+                            label="Back"
+                            href="/writing"
+                            icon="corner-up-left"
+                        />
+                        <div
+                            class="text-sand-12 text-xl lg-text-2xl font-bold mb-6"
+                        >
+                            {title}
                         </div>
+                        <slot name="content" />
                     </div>
                 </div>
             </div>
