Improve the blog description

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const sortedEssays = getSortedByDate(essays);
     >
       <p class="text-sand-11">
         "Learn in Public" space for software engineering, AI, productivity and thinking
-        systems by <a href="#about" class="underline hover:text-sand-12"
+        systems created by <a href="#about" class="underline hover:text-sand-12"
           >@paczkow</a
         >
       </p>
