--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <nav class="fixed top-0 left-0 right-0 h-20 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80">
     </nav>
     <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 pt-24 pb-32 px-8 md:justify-between lg:grid-cols-[320px_585px] lg:gap-8"
+      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 pt-24 pb-32 px-4 md:px-8 md:justify-between lg:grid-cols-[320px_585px] lg:gap-8"
     >
       <slot />
     </div>
