--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -13,14 +13,19 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="m-0 h-full w-full">
+<html lang="en" class="m-0 w-full">
   <Head title={title} />
-  <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 h-full w-full">
-    <nav class="fixed top-0 left-0 right-0 h-20 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80">
-    </nav>
-    <div
-      class="mx-auto grid min-h-screen max-w-6xl grid-cols-1 grid-rows-[1fr] gap-y-8 pt-24 pb-32 px-4 md:px-8 md:justify-between lg:grid-cols-[320px_585px] lg:gap-8"
+  <body class="bg-sand-1 dark:bg-dark-sand-1 m-0 w-full">
+    <nav
+      class="mx-auto max-w-3xl lg:max-w-6xl sticky top-0 left-0 right-0 pt-16 pb-8 z-50 backdrop-blur-md bg-sand-1/80 dark:bg-dark-sand-1/80"
     >
+      <div class="mx-auto max-w-6xl h-full px-4 flex items-center">
+        <a href="/" class="text-sand-12 px-4 font-medium hover:text-sand-11"
+          >Michał Paczków</a
+        >
+      </div>
+    </nav>
+    <div class="mx-auto max-w-3xl lg:max-w-6xl pt-16 pb-32">
       <slot />
     </div>
   </body>
