--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import IconLink from "@/components/IconLink.astro";
 import Link from "@/components/Navlink.astro";
 import { Icon } from "astro-icon/components";
 import { getSortedByDate } from "@/helpers/posts.ts";
-import Layout from "@/layouts/Base.astro";
+import Layout from "@/layouts/TwoColumn.astro";
 import { SITE } from "config";
 
 const essayCollection = await getCollection("essays");
@@ -28,19 +28,18 @@ const sortedEssays = getSortedByDate(essays);
 ---
 
 <Layout title={SITE.title}>
-  <main class="contents">
-    <div
-      class="sticky col-span-full mb-8 flex flex-col gap-4 lg:top-(--nav-height) lg:col-start-1 lg:col-end-2 lg:mb-0 lg:h-[calc(100vh-224px)]"
-    >
-      <p class="text-sand-11 px-4 lg:px-0">
-        "Learn in Public" space for software engineering, AI, productivity and thinking
-        systems created by <a href="#about" class="underline hover:text-sand-12"
-          >@paczkow</a
+  <Fragment slot="sidebar">
+    <div class="flex flex-col gap-4 h-full">
+      <p class="text-sand-11 lg:px-0">
+        "Learn in Public" space for software engineering, AI, productivity and
+        thinking systems created by <a
+          href="#about"
+          class="underline hover:text-sand-12">@paczkow</a
         >
       </p>
       <p></p>
       <div class="mt-16 hidden flex-col gap-4 lg:flex">
-        <Link to="essays" label="Essays" className="active" />
+        <Link to="essays" label="Writing" className="active" />
         <Link to="about" label="About" />
       </div>
       <div class="mt-auto hidden gap-4 lg:flex">
@@ -49,21 +48,21 @@ const sortedEssays = getSortedByDate(essays);
         <IconLink to={SITE.social.bluesky} icon="bluesky" />
       </div>
     </div>
-    <div
-      class="col-span-full flex flex-col gap-20 lg:col-start-2 lg:col-end-3 mr-[2px]"
-    >
+  </Fragment>
+  <Fragment slot="content">
+    <div class="flex flex-col gap-20">
       <section id="essays" class="mt-[-116px] flex flex-col gap-12 pt-[116px]">
         <div class="flex items-baseline justify-between px-4">
           <h2 class="text-sand-12 font-medium">Writing</h2>
           <a
             href="/writing"
-            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2 text-sm"
+            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
             >All Writing <Icon name="arrow-up-right" class="h-4 w-4" /></a
           >
         </div>
-        <div class="group flex flex-col gap-16 md:gap-8">
+        <div class="group flex flex-col gap-8">
           {
-            sortedEssays.map((post) => {
+            [...sortedEssays, ...sortedEssays].slice(0, 4).map((post) => {
               return (
                 <Card
                   id={post.id}
@@ -100,7 +99,7 @@ const sortedEssays = getSortedByDate(essays);
         </div>
       </section>
     </div>
-  </main>
+  </Fragment>
 </Layout>
 
 <script>
@@ -125,7 +124,15 @@ const sortedEssays = getSortedByDate(essays);
 
         if (section) {
           observerEnabled = false;
-          section.scrollIntoView({ behavior: "smooth" });
+
+          const elementPosition = section.getBoundingClientRect().top;
+          const offsetPosition = elementPosition + window.pageYOffset - 48;
+
+          window.scrollTo({
+            top: offsetPosition,
+            behavior: "smooth",
+          });
+
           setTimeout(() => {
             observerEnabled = true;
           }, 500);
@@ -134,12 +141,12 @@ const sortedEssays = getSortedByDate(essays);
     });
   }
 
-  function registerObserver(links: Element[], sections: Element[] | null) {
-    if (!sections?.length) return;
+  function registerObserver(links: Element[], sections: Element[]) {
+    if (!sections.length) return;
 
     const observerOptions = {
       root: null,
-      rootMargin: "0px",
+      rootMargin: "0px 0px -128px 0px",
       threshold: 0.5,
     };
 
