--- a/src/layouts/TwoColumn.astro
+++ b/src/layouts/TwoColumn.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
     class="grid grid-cols-1 grid-rows-[1fr] gap-y-8 lg:grid-cols-[340px_585px] lg:gap-8 px-4 md:justify-between"
   >
     <aside
-      class="lg:sticky lg:top-(--nav-height) col-start-1 col-end-2 px-4 lg:h-[calc(100vh-320px)]"
+      class="lg:sticky z-10 lg:top-(--nav-height) col-start-1 col-end-2 px-4 lg:h-[calc(100vh-320px)]"
     >
       <slot name="sidebar" />
     </aside>
