--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
+@custom-variant hover (&:hover);
+
 @custom-variant dark (&:where(.dark, .dark *));
 
 @theme {
