--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,9 @@ import { getCollection, render } from "astro:content";
 import { Card } from "@/components/Card.tsx";
 import IconLink from "@/components/IconLink.astro";
 import Link from "@/components/Navlink.astro";
-import { Icon } from "astro-icon/components";
 import { getSortedByDate } from "@/helpers/posts.ts";
 import Layout from "@/layouts/TwoColumn.astro";
+import { Icon } from "astro-icon/components";
 import { SITE } from "config";
 
 const essayCollection = await getCollection("essays");
@@ -56,7 +56,7 @@ const sortedEssays = getSortedByDate(essays);
           <h2 class="text-sand-12 font-medium">Writing</h2>
           <a
             href="/writing"
-            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2"
+            class="text-sand-11 underline hover:text-sand-12 flex items-center gap-1 mb-2 active:text-sand-12"
             >All Writing <Icon name="arrow-up-right" class="h-4 w-4" /></a
           >
         </div>
@@ -65,6 +65,7 @@ const sortedEssays = getSortedByDate(essays);
             sortedEssays.slice(0, 4).map((post) => {
               return (
                 <Card
+                  client:load
                   id={post.id}
                   date={post.date}
                   title={post.title}
