style: align date on Card and title on article page

--- a/src/pages/writing/[slug]/index.astro
+++ b/src/pages/writing/[slug]/index.astro
@@ -47,7 +47,7 @@ const { Content, headings } = await render(post);
       </a>
     </div>
     <div class="mb-16">
-      <h1 class="text-sand-12 font-medium">{post.data.title}</h1>
+      <h1 class="text-sand-12 font-medium md:text-lg">{post.data.title}</h1>
       <time
         class="text-sand-11 text-sm"
         datetime={post.data.date.toISOString()}
