--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,8 +31,8 @@ const sortedEssays = getSortedByDate(essays);
   <Fragment slot="sidebar">
     <div class="flex flex-col gap-4 h-full">
       <p class="text-sand-11 lg:px-0">
-        "Learn in Public" space for software engineering, AI, productivity and
-        thinking systems created by <a
+        "Learn in Public" space for software craftsmanship, AI,
+        and note-taking system to expand thinking by <a
           href="#about"
           class="underline hover:text-sand-12">@paczkow</a
         >
